--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
+    "@sweetalert/with-react": "^0.1.1",
     "axios": "^0.23.0",
     "chalk": "^2.4.2",
     "compression": "1.7.4",
@@ -87,11 +88,13 @@
     "react-intl": "2.8.0",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
+    "react-toastify": "^5.3.1",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
-    "styled-components": "4.2.0"
+    "styled-components": "4.2.0",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@babel/cli": "7.4.3",
